# loud-legacy

./: .gitignore  CREATE_TEST_ACCOUNT_ALL_PLATFORMS.sql  DEMO_ACCOUNT_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  ENVIRONMENT_VARIABLES_CHECKLIST.md  FEATURE_PROGRESS.md  MULTI_PLATFORM_ARCHITECTURE.md  PLATFORM_BUILD_STATUS.md  README.md  URGENT_TEST_ACCOUNT_SETUP.md  commit-all.sh  footer-config.yaml  netlify.toml  package-lock.json  package.json
docs/: README.md  tech-spec.md  (+1 more)
services/valora/: marketplace.db  pyproject.toml
services/valora/real_estate/: image_analysis_runner.py  payload.json  payload.json.save
services/valora/real_estate/ml/: model_inference.py
services/valora/real_estate/models/: schemas.py
services/valora/real_estate/sample.jpg/: image.txt
services/valora/services/comparable_engine/app/: main.py
services/valora/services/data_feeds/app/: cache.py  main.py  security.py
services/valora/services/data_feeds/app/clients/: external.py
services/valora/services/data_feeds/app/routes/: feeds.py
services/valora/services/gateway/app/: clients.py  main.py  settings.py
services/valora/services/marketplace/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
services/valora/services/model_serving/app/: main.py
services/valora/services/valuation_orchestrator/app/: main.py  service.py
services/valora/tests/: test_data_feeds.py  test_marketplace_api.py  test_real_estate_pipeline.py  test_valuation_orchestrator_api.py
services/valora/valora_common/: security.py
services/valora/valora_common/schemas/: valuation.py
(+414 files in other folders)
