[tool.poetry]
name = "valora"
version = "0.1.0"
description = "VALORA multi-asset valuation platform"
authors = ["VALORA Engineering <eng@valora.app>"]
readme = "README.md"
packages = [
    { include = "services" },
    { include = "valora_common" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"
redis = "^5.0.4"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
